Presets can now be modified by mods King Doc the 4th